CSS rules updated.

--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -1,9 +1,16 @@
 h1	{
  
+	
+	 text-decoration: underline; 
+	 text-decoration: none;
+	 border : thick solid red;
+	 text-align: center;
+	 padding: 1ex;
+	 width: 50%;
+	
+	 font-family: tahoma, helvetica, sans-serif;
 	 font-size: 24pt; 
 	 color: red; 
-	 text-decoration: underline; 
-	 font-family: tahoma, helvetica, sans-serif;
 	}
 em	{
  	 font-style: normal;
@@ -14,3 +21,21 @@ em	{
 ul	{
 		list-style-type: square;
 	}
+
+a:hover {
+	text-decoration: none;
+	}
+
+li:first-child {
+	border: thick solid green;
+	margin-bottom: 1em;
+	margin-top: 1em;
+	padding: 1ex;
+	width: 40%;
+	}
+
+p.centered {
+	text-align: center;
+	width: 50%;
+	}
+
